--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     api "com.android.support:cardview-v7:$support_version"
 
     implementation "android.arch.lifecycle:extensions:$arch_version"
-    implementation "android.arch.lifecycle:runtime:1.0.0"
+    implementation "android.arch.lifecycle:runtime:$arch_version"
     annotationProcessor "android.arch.lifecycle:common-java8:$arch_version"
     implementation "android.arch.persistence.room:runtime:$arch_version"
     implementation "android.arch.persistence.room:compiler:$arch_version"
