--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,14 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
 
+    testImplementation "junit:junit:4.12"
+    testImplementation "com.squareup.okhttp3:mockwebserver:3.8.1"
+    testImplementation ("android.arch.core:core-testing:1.0.0", {
+        exclude group: 'com.android.support', module: 'support-compat'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-core-utils'
+    })
+
+    testImplementation "org.mockito:mockito-core:2.7.19"
 
 }
