--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:common-java8:$arch_version"
     implementation "android.arch.persistence.room:runtime:$arch_version"
     implementation "android.arch.persistence.room:compiler:$arch_version"
-
+    implementation "android.arch.paging:runtime:1.0.0-alpha3"
     implementation "com.android.support:support-v4:$support_version"
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
